--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         td {
             padding: 8px;
-            border-left: 3px solid hsla(348, 7%, 13%, 1);
+            border-left: 2px solid hsla(348, 7%, 13%, 1);
         }
 
         td:first-child {
@@ -59,7 +59,7 @@
                 <h4>Semantic differential</h4>
                 <div id="cp-plot"></div>
             </div>
-            <div style="border-left: 3px solid hsla(348, 7%, 13%, 1); padding-left: 20px">
+            <div style="border-left: 2px solid hsla(348, 7%, 13%, 1); padding-left: 20px">
                 <h4>Would implement</h4>
                 <div id="cp-boxplot"></div>
             </div>
@@ -69,34 +69,63 @@
     <div>
         <h2>Preselection</h2>
         <p id="pre"></p>
-        <div id="pre-plot"></div>
-        <h4>Would implement</h4>
-        <div id="pre-boxplot"></div>
+        <div style="display: flex; gap: 20px">
+            <div>
+                <h4>Semantic differential</h4>
+                <div id="pre-plot"></div>
+            </div>
+            <div style="border-left: 2px solid hsla(348, 7%, 13%, 1); padding-left: 20px">
+                <h4>Would implement</h4>
+                <div id="pre-boxplot"></div>
+            </div>
+        </div>
     </div>
 
     <div>
         <h2>Hard to Cancel</h2>
         <p id="hard"></p>
-        <div id="hard-plot"></div>
-        <h4>Would implement</h4>
-        <div id="hard-boxplot"></div>
+        <div style="display: flex; gap: 20px">
+            <div>
+                <h4>Semantic differential</h4>
+                <div id="hard-plot"></div>
+            </div>
+            <div style="border-left: 2px solid hsla(348, 7%, 13%, 1); padding-left: 20px">
+                <h4>Would implement</h4>
+                <div id="hard-boxplot"></div>
+            </div>
+        </div>
     </div>
 
     <div>
         <h2>Social Proof</h2>
         <p id="social"></p>
-        <div id="social-plot"></div>
-        <h4>Would implement</h4>
-        <div id="social-boxplot"></div>
+        <div style="display: flex; gap: 20px">
+            <div>
+                <h4>Semantic differential</h4>
+                <div id="social-plot"></div>
+            </div>
+            <div style="border-left: 2px solid hsla(348, 7%, 13%, 1); padding-left: 20px">
+                <h4>Would implement</h4>
+                <div id="social-boxplot"></div>
+            </div>
+        </div>
     </div>
 
     <div>
         <h2>Forced Action</h2>
         <p id="fa"></p>
-        <div id="fa-plot"></div>
+        <div style="display: flex; gap: 20px">
+            <div>
+                <h4>Semantic differential</h4>
+                <div id="fa-plot"></div>
+            </div>
+            <div style="border-left: 2px solid hsla(348, 7%, 13%, 1); padding-left: 20px">
+                <h4>Would implement</h4>
+                <div id="fa-boxplot"></div>
+            </div>
+        </div>
     </div>
-    <h4>Would implement</h4>
-    <div id="fa-boxplot"></div>
+
 </div>
 
 
