--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
         }
 
         #description {
-            font-size: 1.2rem;
             margin-top: 8px;
             margin-bottom: 32px;
         }
@@ -93,8 +92,8 @@
         .popover {
           position: fixed;
           top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
         .popover img {
             max-width: 60vw;
@@ -119,6 +118,46 @@
             max-height: 100vh;
             overflow-y: auto;
             padding: 32px;
+        }
+
+        table {
+            border-spacing: 0;
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 1.25rem;
+            }
+            #description {
+                font-size: 0.875rem;
+            }
+            p {
+                font-size: 0.675rem;
+            }
+            h2 {
+                font-size: 1rem;
+            }
+            h3 {
+                font-size: 0.875rem;
+            }
+            h4 {
+                font-size: 0.75rem;
+            }
+            button {
+                font-size: 0.65rem;
+            }
+            th {
+                font-size: 0.75rem;
+            }
+            .charts {
+                flex-wrap: wrap;
+            }
+            .charts > :nth-child(2) {
+                border: none;
+            }
+            .popover img {
+                max-width: 90vw;
+            }
         }
     </style>
 </head>
