--- a/index.html
+++ b/index.html
@@ -1910,9 +1910,9 @@
             const chart = Plot.plot({
                 marginLeft: 100,
                 marginRight: 100,
-                x: {tickFormat: "%", label: "answers (%)", grid: true, domain: [-0.8, 0.8]},
+                x: {tickFormat: "%", label: "Antworten (%)", grid: true, domain: [-0.8, 0.8]},
                 y: {tickSize: 0},
-                facet: {data: data, y: "labelPositive", label: i === 0 ? "dark pattern" : "no dark pattern"},
+                facet: {data: data, y: "labelPositive", label: i === 0 ? "Dark Pattern" : "No Dark Pattern"},
                 color: {domain: likert.order, scheme: "BuRd"},
                 marks: [
                     Plot.barX(
@@ -1945,12 +1945,12 @@
 
         function mapBarPlotData(data, group) {
             const sum = data.reduce((acc, {answer}) => acc + answer, 0)
-            return data.map(({answer}, i, arr) => ({"dark pattern": group, answer: i + 1 - 3, count: answer / sum}))
+            return data.map(({answer}, i, arr) => ({"Dark Pattern": group, Antwort: i + 1 - 3, "Anzahl": answer / sum}))
         }
 
         const usageData = [
-        ...mapBarPlotData(datasets["dark pattern"][2].answers, "with"),
-        ...mapBarPlotData(datasets["no dark pattern"][2].answers, "without")
+        ...mapBarPlotData(datasets["dark pattern"][2].answers, "Mit"),
+        ...mapBarPlotData(datasets["no dark pattern"][2].answers, "Ohne")
         ]
 
         const usageChart = Plot.plot({
@@ -1960,11 +1960,11 @@
             color: {scheme: "RdBu"},
             marks: [
                 Plot.barY(usageData, {
-                    x: "dark pattern",
-                    y: "count",
-                    fill: "dark pattern",
-                    fx: "answer",
-                    sort: {x: null, color: null, fx: {value: "y", reduce: "sum"}}
+                    x: "Dark Pattern",
+                    y: "Anzahl",
+                    fill: "Dark Pattern",
+                    fx: "Antwort",
+                    sort: {x: null, color: null, fx: {value: "x", reduce: "sum"}}
                 }),
                 Plot.ruleY([0])
             ]
