--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             .charts {
                 flex-wrap: wrap;
             }
-            .charts > :nth-child(2) {
+            .charts > :not(:first-child) {
                 border: none;
             }
             .popover img {
@@ -207,7 +207,7 @@
                         <div id="cp-boxplot"></div>
                     </div>
                     <div>
-                        <h4 class="would-i">Was Dark Pattern wurde wahrscheinlich erkannt. (Analyse anhand der offenen Antworten)</h4>
+                        <h4 class="would-i">Dark Pattern wurde wahrscheinlich erkannt. (Analyse anhand der offenen Antworten)</h4>
                         <div id="cp-found"></div>
                     </div>
                 </div>
@@ -248,7 +248,7 @@
                         <div id="pre-boxplot"></div>
                     </div>
                     <div>
-                        <h4 class="would-i">Was Dark Pattern wurde wahrscheinlich erkannt. (Analyse anhand der offenen Antworten)</h4>
+                        <h4 class="would-i">Dark Pattern wurde wahrscheinlich erkannt. (Analyse anhand der offenen Antworten)</h4>
                         <div id="pre-found"></div>
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                         <div id="hard-boxplot"></div>
                     </div>
                     <div>
-                        <h4 class="would-i">Was Dark Pattern wurde wahrscheinlich erkannt. (Analyse anhand der offenen Antworten)</h4>
+                        <h4 class="would-i">Dark Pattern wurde wahrscheinlich erkannt. (Analyse anhand der offenen Antworten)</h4>
                         <div id="hard-found"></div>
                     </div>
                 </div>
@@ -330,7 +330,7 @@
                         <div id="social-boxplot"></div>
                     </div>
                     <div>
-                        <h4 class="would-i">Was Dark Pattern wurde wahrscheinlich erkannt. (Analyse anhand der offenen Antworten)</h4>
+                        <h4 class="would-i">Dark Pattern wurde wahrscheinlich erkannt. (Analyse anhand der offenen Antworten)</h4>
                         <div id="social-found"></div>
                     </div>
                 </div>
@@ -371,7 +371,7 @@
                         <div id="fa-boxplot"></div>
                     </div>
                     <div>
-                        <h4 class="would-i">Was Dark Pattern wurde wahrscheinlich erkannt. (Analyse anhand der offenen Antworten)</h4>
+                        <h4 class="would-i">Dark Pattern wurde wahrscheinlich erkannt. (Analyse anhand der offenen Antworten)</h4>
                         <div id="fa-found"></div>
                     </div>
                 </div>
